--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="table">
         <h2>Current Tasks</h2>
         <ul class="task_list"></ul>
+        <label><input class="task_done" type="checkbox"></label>
     </div>
     <script src="main.js"></script>
 </body>
